; ModuleID = '/home/carl/AnghaBench/linux/net/iucv/extr_af_iucv.c_iucv_sock_link.c'
source_filename = "/home/carl/AnghaBench/linux/net/iucv/extr_af_iucv.c_iucv_sock_link.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.iucv_sock_list = type { i32, i32 }
%struct.sock = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @iucv_sock_link(%struct.iucv_sock_list* %0, %struct.sock* %1) #0 {
  %3 = alloca %struct.iucv_sock_list*, align 8
  %4 = alloca %struct.sock*, align 8
  store %struct.iucv_sock_list* %0, %struct.iucv_sock_list** %3, align 8
  store %struct.sock* %1, %struct.sock** %4, align 8
  %5 = load %struct.iucv_sock_list*, %struct.iucv_sock_list** %3, align 8
  %6 = getelementptr inbounds %struct.iucv_sock_list, %struct.iucv_sock_list* %5, i32 0, i32 0
  %7 = call i32 @write_lock_bh(i32* %6)
  %8 = load %struct.sock*, %struct.sock** %4, align 8
  %9 = load %struct.iucv_sock_list*, %struct.iucv_sock_list** %3, align 8
  %10 = getelementptr inbounds %struct.iucv_sock_list, %struct.iucv_sock_list* %9, i32 0, i32 1
  %11 = call i32 @sk_add_node(%struct.sock* %8, i32* %10)
  %12 = load %struct.iucv_sock_list*, %struct.iucv_sock_list** %3, align 8
  %13 = getelementptr inbounds %struct.iucv_sock_list, %struct.iucv_sock_list* %12, i32 0, i32 0
  %14 = call i32 @write_unlock_bh(i32* %13)
  ret void
}

declare dso_local i32 @write_lock_bh(i32*) #1

declare dso_local i32 @sk_add_node(%struct.sock*, i32*) #1

declare dso_local i32 @write_unlock_bh(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
